--- a/assets/app.css
+++ b/assets/app.css
@@ -3,4 +3,11 @@
 
 :root {
     --font-base: "DM Sans", sans-serif;
+
+    --color-white: "white";
+    --color-lime-base: rgb(143, 220, 194);
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-base);
 }
